--- a/WebContent/r/cms/www/default/css/index.css
+++ b/WebContent/r/cms/www/default/css/index.css
@@ -43,7 +43,7 @@
 	
 .bx_fl, .fl {float: left;}
 .bx_fr, .fr {float: right;}
-.container{width:1200px; margin:0 auto;}
+.container{width:1000px; margin:0 auto;}
 .clear{ clear:both;}
 .c10{height:10px;width:100%;}
 .c20{height:20px;width:100%;}
@@ -93,7 +93,7 @@
 
 /*head*/
 .header{width:100%; border-bottom:1px solid #cfcfcf; height:80px; box-sizing:border-box; background-color:#fff;}
-.header .logo{display:inline-block; float:left; width:230px; height:32px; margin-top:24px; background-image:url(../images/tubiao.png); background-position:-286px -10px;}
+.header .logo{display:inline-block; float:left; width:230px; height:32px; margin-top:24px; background-position:-286px -10px;}
 .rel{position:relative;}
 .header-jf{position:absolute; top:8px; right:0;}
 .header-rss{position:absolute; top:29px; right:0;}
@@ -136,6 +136,7 @@
 /*main*/
 .main{padding:32px 0 50px; border-bottom:5px solid #ef3838; position:relative;}
 .w860{width:850px; float:left;}
+.w630{width:630px; float:left;}
 
 /*news*/
 .topNews{width:100%; height:50px; background:url(../images/topNews.png) left top no-repeat #f0f0f0; border-radius:4px; -moz-border-radius:4px; -o-border-radius:4px; -webkit-border-radius:4px; line-height:50px; text-indent:150px;}
@@ -298,8 +299,8 @@
 .tssj{}
 .tssj .tssjNav{margin:0 14px; width:130px; height:44px; background-image:url(../images/tubiao.png); background-position:-436px -66px;}
 .tssjList{margin-top:8px;}
-.tssjList .tssjItem{float:left; width:330px; padding:15px; height:260px; overflow:hidden; margin-left:55px; position:relative;}
-.tssjList .tssjItem .tssjImg{width:330px; height:200px; display:block;}
+.tssjList .tssjItem{float:left; width:285px; padding:15px; height:270px; overflow:hidden; margin-left:25px; position:relative;}
+.tssjList .tssjItem .tssjImg{width:285px; height:200px; display:block;}
 .tssjList .tssjItem .tssjImg img{width:100%; height:100%;}
 .tssjList .tssjItem h1{margin-top:14px;}
 .tssjList .tssjItem h1 a{color:#1f1f1f; font-weight:normal;}
@@ -596,7 +597,7 @@
 /*文库样式结束*/
 
 /*新闻内容页样式开始*/
-.content_w850{width:850px; float:left;}
+.content_w850{width:680px; float:left;}
 .content_w850 h1{color:#1f1f1f; font-size:24px; font-weight:normal;}
 h1 .position{margin-left:50px; color:#333333; font-size:16px; position:relative;}
 h1 .position:before{width:12px; height:13px; display:inline-block; content:""; position:absolute; background:url(../images/content_tubiao.png) -13px -11px no-repeat; left:-20px; bottom:3px;}
@@ -666,9 +667,9 @@ h1 .position:before{width:12px; height:13px; display:inline-block; content:""; p
 .reward-order .reward-order-list .r-o-top td{}
 
 .content-link{width:100%; padding-top:14px; border-top:1px solid #989898; color:#666666; font-size:14px; line-height:20px;}
-.content-link .prev-content{width:45%; float:left; text-align:left;}
+.content-link .prev-content{width:49%; float:left; text-align:left;}
 .content-link .prev-content i{width:20px; height:20px; display:inline-block; float:left; background:url(../images/content_tubiao.png) -66px -11px no-repeat; margin-right:6px;}
-.content-link .next-content{width:45%; float:right; text-align:right;}
+.content-link .next-content{width:49%; float:right; text-align:right;}
 .content-link .next-content i{width:20px; height:20px; display:inline-block; float:right; background:url(../images/content_tubiao.png) -66px -41px no-repeat; margin-left:6px;}
 .content-link a{color:#1f1f1f; font-size:14px;}
 
