--- a/WebContent/WEB-INF/t/cms/www/default/include/right310.html
+++ b/WebContent/WEB-INF/t/cms/www/default/include/right310.html
@@ -13,7 +13,7 @@
     </section>
     <section class="tag issue clearfix">
       <div class="tag-nav"><h1><a>娱乐热点</a></h1></div>
-      [@cms_content_list typeId='2' count='5' orderBy='7' channelId='${channel.id}' channelOption='1']
+      [@cms_content_list typeId='2' count='5' orderBy='7' channelId='' channelOption='1']
      [#list tag_list as a]
       <div class="item clearfix" [#if a_index<1]style="border-top:none;"[/#if]>
         <a href="${a.url}" target="_blank" class="img"><img src="${a.typeImg!}"></a>
