--- a/WebContent/WEB-INF/t/cms/www/default/include/footer.html
+++ b/WebContent/WEB-INF/t/cms/www/default/include/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div class="footer-link container">
-    <a style="margin-left:0;" href="http://www.jeecms.com">关于我们</a><a href="http://www.jeecms.com/lxwm.htm">联系我们</a><a href="http://www.jeecms.com/zhaopin.htm">诚聘英才</a><a href="http://www.jeecms.com/">友情链接</a><a href="http://www.jeecms.com/ad.htm">合作服务</a><a href="http://www.jeecms.com/xkxy.htm">许可协议</a><a onclick="SetHome(window.location)" href="javascript:void(0)">设为首页</a><!-- <a href="http://v8.jeecms.com/jeeadmin/jeecms/index.do" target="_blank">管理登录</a> -->
+    <a style="margin-left:0;" href="${base}/about.html">关于我们</a><a href="${base}/contact.html">联系我们</a><a href="http://www.jeecms.com/zhaopin.htm">诚聘英才</a><a href="http://www.jeecms.com/">友情链接</a><a href="http://www.jeecms.com/ad.htm">合作服务</a><a href="${base}/relief.html">免责声明</a><a onclick="SetHome(window.location)" href="javascript:void(0)">设为首页</a><!-- <a href="http://v8.jeecms.com/jeeadmin/jeecms/index.do" target="_blank">管理登录</a> -->
   </div>
   <div class="copyright container"><p>     ICP备案号：京ICP备17028208号     Powered by JeeCms Copyright © 2007-2017 www.jeecms.com, All Rights Reserved</p>
   
