--- a/WebContent/r/cms/www/default/css/home20170206.css
+++ b/WebContent/r/cms/www/default/css/home20170206.css
@@ -42,7 +42,7 @@
 #foucsBox .foucsButton span{ display:inline; width:46px; height:48px; margin:7px 0px 0; cursor: pointer; overflow:hidden; background:url(../img/tukubg_qq.png) -544px -570px no-repeat; }
 #foucsBox .foucsButton img{ display:none; cursor:pointer; border-width:0px; vertical-align:middle; width:100px; height:56px; }
 #foucsBox .rBtn{ float:right; }
-#foucsBox .rBtn span{ float:right; background-position:-600px -570x;}
+#foucsBox .rBtn .pre{ float:right; background-position:-600px -570x;}
 #foucsBox .lBtn{ float:left; }
 #foucsBox .lBtn span{ float:left; background-position:-544px -570px;}
 
