add news content hx

--- a/WebContent/r/cms/www/default/css/hx/build.css
+++ b/WebContent/r/cms/www/default/css/hx/build.css
@@ -1178,7 +1178,7 @@ header.active .navbar-left .nav-news,header.active .navbar-nav.navbar-right .use
 .icon {
 	display: inline-block;
 	vertical-align: text-bottom;
-	background-image: url(../image/icon.png);
+	background-image: url(../../images/hx/huxiu.png);
 	background-repeat: no-repeat;
 	width: 20px;
 	height: 20px
