--- a/WebContent/WEB-INF/t/cms/www/default/include/header.html
+++ b/WebContent/WEB-INF/t/cms/www/default/include/header.html
@@ -17,7 +17,7 @@ function qkeypress(){
   <div class="container clearfix">
     <!-- <a class="logo" href="${base}/"></a> -->
     <a class="logo" href="${base}/" target="_blank">
-    	<img src="${base}/r/cms/www/online_old.png" alt="">
+    	<img src="${base}/r/cms/www/logo-new.png" alt="">
     </a>
     [#include "../include/nav.html"]
     <!-- 搜索框 -->
