--- a/WebContent/WEB-INF/t/cms/www/default/include/top.html
+++ b/WebContent/WEB-INF/t/cms/www/default/include/top.html
@@ -1,3 +1,4 @@
 <section class="top">
-  <div class="yellow"></div><div class="red"></div><div class="blue"></div><div class="yellow"></div><div class="red"></div>	
-</section>
+  <!-- <div class="yellow"></div><div class="red"></div><div class="blue"></div><div class="yellow"></div><div class="red"></div>	
+ -->
+ </section>
