--- a/WebContent/WEB-INF/t/cms/www/default/include/footer.html
+++ b/WebContent/WEB-INF/t/cms/www/default/include/footer.html
@@ -2,7 +2,7 @@
   <div class="footer-link container">
     <a style="margin-left:0;" href="${base}/about.jhtml">关于我们</a><a href="${base}/contact.jhtml">联系我们</a><a href="${base}/links.jhtml">友情链接</a><a href="${base}/ad.jhtml">广告合作</a><a href="${base}/relief.jhtml">免责声明</a><!-- <a href="http://v8.jeecms.com/jeeadmin/jeecms/index.do" target="_blank">管理登录</a> -->
   </div>
-  <div class="copyright container"><p>     ICP备案号：京ICP备17028208号      Copyright © 2007-2017 www.jeecms.com, All Rights Reserved</p>
+  <div class="copyright container"><p>     ICP备案号：京ICP备17028208号&nbsp;&nbsp;Copyright © 2007-2017 www.czongyi.cn &nbsp; All Rights Reserved</p>
   
   </div>
 </footer>
