--- a/WebContent/r/cms/www/default/css/index.css
+++ b/WebContent/r/cms/www/default/css/index.css
@@ -199,6 +199,7 @@
 
 /*tag*/
 .w310{width:310px; float:right;margin-top: 18px;}
+.w310new{width:310px; float:right;margin-top: 18px;}
 .tag .tag-nav{width:100%; border-bottom:2px solid #e7e7e7; padding-bottom:10px; position:relative;}
 .tag .tag-nav h1{color:#1a1a1a; font-weight:normal; position:relative; display:inline-block;}
 .tag .tag-nav h1:after{content:""; height:2px; width:100%; position:absolute; left:0; bottom:-12px; background-color:#ef3838;}
