--- a/WebContent/r/cms/www/default/css/jquery.bxslider.css
+++ b/WebContent/r/cms/www/default/css/jquery.bxslider.css
@@ -38,6 +38,7 @@
 .bx-wrapper .bx-viewport {
 	left:0;
 	background: #fff;
+	width: 155px;
 	
 	/*fix other elements on the page moving (on Chrome)*/
 	-webkit-transform: translatez(0);
