--- a/WebContent/r/cms/www/default/css/home.css
+++ b/WebContent/r/cms/www/default/css/home.css
@@ -227,6 +227,7 @@
 .rdjj-list li .bold{font-weight:bold;}
 
 .right-fr{width:350px;}
+.right-fr2{width:360px;margin-top:35px;}
 .home-banner{width:426px; height:260px; position:relative; overflow:hidden;}
 .home-banner .bd{width:426px; height:260px;}
 .home-banner .bd li{position:absolute;top:0;left:426px;width:426px;height:260px;}
