--- a/WebContent/WEB-INF/t/cms/www/default/include/header_hx.html
+++ b/WebContent/WEB-INF/t/cms/www/default/include/header_hx.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="navbar-header transition">
             <a href="${base}/" title="首页">
-                <img src="${base}/r/cms/www/1.png" alt="${site.name}" title="首页">
+                <img src="${base}/r/cms/www/zgzixun21.png" alt="${site.name}" title="首页">
             </a>
         </div>
         <ul class="nav navbar-nav navbar-left">
