--- a/WebContent/WEB-INF/t/cms/www/default/include/header_hx.html
+++ b/WebContent/WEB-INF/t/cms/www/default/include/header_hx.html
@@ -1,4 +1,6 @@
-
+<script type="text/javascript" src="/${res}/js/hx/jquery-1.11.1.min.js"></script>
+<script type="text/javascript" src="/${res}/js/hx/jquery.detection.js"></script>
+<script type="text/javascript" src="/${res}/js/hx/sea.js"></script>
 <header id="top" role="banner" class="transition">
     <div class="container">
         <div class="navbar-header transition">
