--- a/WebContent/WEB-INF/t/cms/www/default/include/footer_hx.html
+++ b/WebContent/WEB-INF/t/cms/www/default/include/footer_hx.html
@@ -46,7 +46,7 @@
             <a href="https://www.huxiu.com/help" target="_blank" class="transition">常见问题解答</a>
             <a href="https://www.huxiu.com/tags/10340.html" target="_blank" class="transition">防网络诈骗专题</a>
         </div>
-        <span>Copyright © <a href="https://www.huxiu.com/">虎嗅网</a> <a href="http://www.miitbeian.gov.cn/" target="_blank">京ICP备12013432号-1</a>
+        <span>Copyright © <a href="http://www.cnews123.com/">中国快讯</a> <a href="http://www.miitbeian.gov.cn/" target="_blank">京ICP备12013432号-1</a>
             &nbsp;<a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11010102001402" target="_blank"><i class="i-wj"></i>京公网安备 11010102001402号</a>&nbsp;&nbsp;&nbsp;<em class="bull-right">本站由</em><i class="icon-aliyun" style="width: 70px;background-size: 100%;left: 7px;"></i><em class="bull-em">提供计算与安全服务</em>
         </span>
         <div class="footer-icon-list pull-right">
