--- a/WebContent/WEB-INF/t/cms/www/mobile/include/navi.html
+++ b/WebContent/WEB-INF/t/cms/www/mobile/include/navi.html
@@ -1,10 +1,9 @@
 <nav id="menu" class="nd-nav">
     <ul class="n-index">
         <li class="menu1"><a href="${base}/">首页</a></li>
-        <li class="menu2">[@cms_channel id='1']<a href="${tag_bean.url}">新闻</a>[/@cms_channel]</li>
-        <li class="menu3">[@cms_channel id='42']<a href="${tag_bean.url}">图库</a>[/@cms_channel]</li>
-        <li class="menu4">[@cms_channel id='46']<a href="${tag_bean.url}">视频</a>[/@cms_channel]</li>
-        <li class="menu5">[@cms_channel id='9']<a href="${tag_bean.url}">下载</a>[/@cms_channel]</li>
+        <li class="menu3">[@cms_channel id='42']<a href="">图库</a>[/@cms_channel]</li>
+        <li class="menu4">[@cms_channel id='46']<a href="">视频</a>[/@cms_channel]</li>
+        <li class="menu5">[@cms_channel id='9']<a href="">下载</a>[/@cms_channel]</li>
     </ul>
 </nav>
 <!--导航弹出层-->
