--- a/WebContent/WEB-INF/t/cms/www/default/include/footer_hx.html
+++ b/WebContent/WEB-INF/t/cms/www/default/include/footer_hx.html
@@ -39,47 +39,16 @@
 
     <div class="container copy-right">
         <div class="footer-tag-list">
-            <a href="https://www.huxiu.com/about.html" target="_blank" class="transition">关于我们</a>
-            <a href="https://www.huxiu.com/joinus.html" target="_blank" class="transition">加入我们</a>
-            <a href="https://www.huxiu.com/links" target="_blank" class="transition">合作伙伴</a>
-            <a href="https://www.huxiu.com/contact.html" target="_blank" class="transition">广告及服务</a>
-            <a href="https://www.huxiu.com/help" target="_blank" class="transition">常见问题解答</a>
-            <a href="https://www.huxiu.com/tags/10340.html" target="_blank" class="transition">防网络诈骗专题</a>
+            <a href="" target="_blank" class="transition">关于我们</a>
+            <a href="" target="_blank" class="transition">加入我们</a>
+            <a href="" target="_blank" class="transition">合作伙伴</a>
+            <a href="" target="_blank" class="transition">广告及服务</a>
+            <a href="" target="_blank" class="transition">常见问题解答</a>
+            Copyright © <a href="http://www.cnews123.com/">中国快讯</a> <a href="http://www.miitbeian.gov.cn/" target="_blank">京ICP备17034319号</a>
+   
         </div>
-        <span>Copyright © <a href="http://www.cnews123.com/">中国快讯</a> <a href="http://www.miitbeian.gov.cn/" target="_blank">京ICP备12013432号-1</a>
-            &nbsp;<a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11010102001402" target="_blank"><i class="i-wj"></i>京公网安备 11010102001402号</a>&nbsp;&nbsp;&nbsp;<em class="bull-right">本站由</em><i class="icon-aliyun" style="width: 70px;background-size: 100%;left: 7px;"></i><em class="bull-em">提供计算与安全服务</em>
-        </span>
-        <div class="footer-icon-list pull-right">
-            <ul>
-                <a><li class="Qr-code-footer">
-                    <div class="app-qrcode">
-                        <img src="./虎嗅网_files/weixin_erweima.png">
-                    </div>
-                    <i class="icon icon-footer icon-footer-wx"></i>
-                </li>
-                </a>
-                <a><li class="Qr-code-footer">
-                    <div class="app-qrcode">
-                        <img src="./虎嗅网_files/app_erweima.png">
-                    </div>
-                    <i class="icon icon-footer icon-footer-ios"></i>
-                </li>
-                </a>
-                <a><li class="Qr-code-footer">
-                    <div class="app-qrcode">
-                        <img src="./虎嗅网_files/app_erweima.png">
-                    </div>
-                    <i class="icon icon-footer icon-footer-android"></i>
-                </li>
-                </a>
-                <a href="http://en.huxiu.com/" target="_blank" title="虎嗅英文版">
-                    <li><i class="icon icon-footer icon-footer-inter"></i></li>
-                </a>
-                <a href="http://www.huxiu.com/rss" target="_blank" title="虎嗅RSS订阅中心">
-                    <li><i class="icon icon-footer icon-footer-rss"></i></li>
-                </a>
-            </ul>
-        </div>
+        <span></span>
+        
     </div>
 </footer>
 <script type="text/javascript" language="javascript">
