--- a/WebContent/r/cms/www/mobile/css/news.css
+++ b/WebContent/r/cms/www/mobile/css/news.css
@@ -10,5 +10,5 @@
 #position li.cur{ display:inline-block;}
 #position span{color:#fff;}
 
-.img-responsive { display: block; max-width:100%;height: auto;}
+.img-responsive { display: block; max-width:100%;height: 205px;width:400px;}
 .slBanrTxt{ width:100%; height:22px; position:absolute; bottom:0px; left:0px; background:-webkit-gradient(linear, 0 0, 0 bottom, from(rgba(0,0,0,0)), to(rgba(0,0,0,1))); text-indent:2.5%; color:#fff; font-weight:800;}
